Fix tasks view
