# internal/domain/dto/project.go
@@ -3,20 +3,20 @@ package dto
 import "time"
 
 type Project struct {
-	ID              int    `json:"id"`
-	OwnerID         int    `json:"owner_id"`
-	Name            string `json:"name"`
-	Description     string `json:"description"`
-	Color           string `json:"color"`
-	ParentProjectID *int   `json:"parent_project_id"`
-	//  Убрали CreatedAt и UpdatedAt из запроса на создание
-	CreatedAt time.Time `json:"created_at,omitempty"` //  omitempty, чтобы не возвращать null
-	UpdatedAt time.Time `json:"updated_at,omitempty"` //  omitempty, чтобы не возвращать null
+	ID              int       `json:"id"`
+	OwnerID         int       `json:"owner_id"`
+	Name            string    `json:"name"`
+	Description     string    `json:"description"`
+	Color           string    `json:"color"`
+	ParentProjectID *int      `json:"parent_project_id"`
+	CreatedAt       time.Time `json:"created_at,omitempty"` //  omitempty, чтобы не возвращать null
+	UpdatedAt       time.Time `json:"updated_at,omitempty"` //  omitempty, чтобы не возвращать null
 }
 
 type ProjectUser struct {
 	ProjectID       int        `json:"project_id"`
 	UserID          int        `json:"user_id"`
+	UserEmail       string     `json:"user_email"`
 	Permission      string     `json:"permission"`
 	InvitedByUserID *int       `json:"invited_by_user_id"`
 	InvitedAt       time.Time  `json:"invited_at"`
@@ -25,6 +25,6 @@ type ProjectUser struct {
 
 type ProjectUserInvite struct {
 	ProjectID  int    `json:"project_id"`
-	UserID     int    `json:"user_id"`
+	UserEmail  string `json:"user_email"`
 	Permission string `json:"permission"`
 }
